# ENNigma

./: .gitignore  Cargo.toml  README.md
_examples/: Cargo.toml
_examples/datasets/: banknote.test.csv  banknote.train.csv
_examples/src/: banknote.rs  ddos.rs  ddos_udp.rs  lib.rs  xor.rs
crypto/: Cargo.toml
crypto/performance/: Cargo.toml
crypto/performance/src/: bitoperations.rs  fixedpoint.rs  main.rs  nn.rs  types.rs
crypto/src/: lib.rs
crypto/src/cryptobit/: mod.rs  noctx.rs  operations.rs
crypto/src/cryptocontext/: mod.rs
crypto/src/cryptofixedpoint/: mod.rs
ennigma/: Cargo.toml
ennigma/src/: lib.rs
ennigma/src/prelude/: ciphertext.rs  mod.rs  plaintext.rs
ennigma/src/trainer/: decryptor.rs  mod.rs  shared.rs
ennigma/src/types/: ffff_layer.rs  mod.rs
neuralnetworks/: Cargo.toml
neuralnetworks/src/: lib.rs  types.rs
neuralnetworks/src/af/: relu.rs  sigmoid.rs
neuralnetworks/src/layers/: fffc.rs  fffc_opt.rs  mod.rs
neuralnetworks/src/metrics/: fixedpoint.rs  mod.rs
neuralnetworks/src/model/: builder.rs  mod.rs  types.rs
neuralnetworks/src/profiling/: mod.rs
neuralnetworks/src/trainers/: console.rs  file.rs  forward.rs  mod.rs  sink.rs  store_model.rs
numbers/: Cargo.toml
numbers/src/: lib.rs
numbers/src/fixedpoint/: implementations.rs  mod.rs
numbers/src/fixedpoint/operations/: abs.rs  addition.rs  comp.rs  div.rs  exp.rs  mod.rs  mult.rs  shift.rs  trunc.rs  twoscomp.rs
numbers/src/gen_array/: gen1darray.rs  mod.rs  noctx.rs
numbers/src/types/: bool_impl.rs  mod.rs
