[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
numbers = { path = "../numbers", default-features = false }
# tfhe = { path = "../../tfhe-rs/tfhe", features = ["boolean"]  }
tfhe = { version = "0.3", features = ["boolean"]  }
serde = "1.0"
bincode = { version = "1.0", default-features = false }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
spin = { version = "0.9", features = ["once", "std"] }

[features]
default = ["rand", "x86_64"]
x86_64 = ["tfhe/x86_64"]
wasm = ["tfhe/boolean-client-js-wasm-api"]
rand = ["numbers/rand"]

avx512 = ["tfhe/nightly-avx512"]