[package]
name = "neuralnetworks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numbers = { path = "../numbers", default-features = false }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
base64 = { version = "0.21" }
chrono =  { version = "0.4", features = ["serde"] }
log = "0.4"

futures = { version = "0.3", features = ["executor"], optional = true }
rand = { version = "0.8", optional = true }
rand_distr = { version = "0.4", optional = true }
crossterm = { version = "0.26", optional = true }
array-macro = { version = "2.1.5", optional = true }
ciborium = { version = "0.2", optional = true }

tokio = { version = "1.0", features = ["full"], optional = true }
tokio-scoped = { version = "0.2", optional = true }

rayon = { version = "1.7", optional = true }

lazy_static = { version = "1.4", optional = true }

[features]
default = ["neuralnetwork", "tokio", "rand"]
neuralnetwork = [
    "dep:futures",
    "dep:crossterm",
    "dep:array-macro",
    "dep:ciborium",
]
rand = ["dep:rand", "dep:rand_distr", "numbers/rand"]
rayon = ["dep:rayon"]
tokio = ["dep:tokio", "dep:tokio-scoped", "numbers/tokio"]

profiling = ["dep:lazy_static"]
profiling_soft = ["profiling"]
