[package]
name = "numbers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-macro = "2.1.5"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"

rand = { version = "0.8", optional = true }

tokio = { version = "1.0", features = ["full"], optional = true }
tokio-scoped = { version = "0.2", optional = true }

rayon = { version = "1.7", optional = true }

[features]
default = ["rand"]
rand = ["dep:rand"]
rayon = ["dep:rayon"]
tokio = ["dep:tokio", "dep:tokio-scoped"]